--- a/Configuracion/base.properties
+++ b/Configuracion/base.properties
@@ -2,6 +2,6 @@
 #Wed Jun 27 22:39:01 ART 2018
 baseUsuario=root
 baseContrasenia=root
-baseSchema=PDD
+baseSchema=AdminPDD
 basePuerto=3306
 baseIP=localhost
