--- a/Configuracion/base.properties
+++ b/Configuracion/base.properties
@@ -1,7 +1,8 @@
 #
-#Wed Jun 27 22:39:01 ART 2018
+#Sat Jan 26 18:38:20 ART 2019
+baseIP=localhost
+direccionPre=C\:\\Users\\Leandro Iba\u00F1ez\\Desktop\\predica
+baseSchema=AdminPDD
 baseUsuario=root
 baseContrasenia=root
-baseSchema=AdminPDD
 basePuerto=3306
-baseIP=localhost
